# chessengine

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN-VISU.md  DESIGN.md  README.md  pyproject.toml
.claude/skills/verify/: SKILL.md
cpp/: bindings.cpp
cpp/core/: attacks.h  board.cpp  board.h  movegen.cpp  movegen.h  types.h
cpp/eval/: encode.cpp  encode.h  evaluator.h  material.cpp  material.h
cpp/mcts/: eval_queue.h  node.h  search.cpp  search.h  tree.cpp  tree.h
cpp/tools/: search_stress.cpp
data_pretrain/: .gitignore  README.md
docs/: readme-training.md
docs/design/: DESIGN-GPU.md  DESIGN-M6.md  DESIGN-VISU.md  DESIGN.md
docs/dev/: GPU-G1.md  GPU-G2.md
docs/implementation-guides/: M6a.md  M6b.md  M6c.md
python/chessengine/: __init__.py  engine.py  game.py
python/chessengine/eval/: device.py  server.py  torch_eval.py
python/chessengine/training/: __init__.py  arena.py  dataset.py  loop.py  pgn_import.py  pretrain.py  selfplay.py  train.py
python/chessengine/ui/: cli.py
python/chessengine/ui/web/: server.py  shard_view.py
python/chessengine/ui/web/static/: app.js  board.js  edit.js  index.html  params.js  pieces.js  selfplay_viewer.js  sparkline.js  style.css  tree.js
tests/js/: arrows.test.mjs  collapse.test.mjs  compress.test.mjs  layout.test.mjs  sparkline.test.mjs
tests/python/: test_bindings.py  test_cli.py  test_encoding.py  test_eval_server.py  test_game.py  test_loop.py  test_movegen.py  test_parallel.py  test_perft.py  test_policy.py  test_pretrain.py  test_py_evaluator.py  test_search.py  test_snapshot.py  test_torch_eval.py  test_training.py  test_tree_reuse.py  test_tree_view.py  test_web.py
tools/: bench_eval.py
