[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "chessengine"
version = "0.1.0"
description = "Educational MCTS chess engine: Python game layer, parallel C++ search core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chess>=1.11",
    "numpy>=1.26",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "tqdm>=4.66",
]

[project.scripts]
chessengine = "chessengine.ui.cli:main"
chessengine-web = "chessengine.ui.web.server:main"
chessengine-selfplay = "chessengine.training.selfplay:main"
chessengine-train = "chessengine.training.train:main"
chessengine-arena = "chessengine.training.arena:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]
train = [
    "torch>=2.3",
]

[tool.scikit-build]
wheel.packages = ["python/chessengine"]
cmake.version = ">=3.26"
build-dir = "build/{wheel_tag}"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: long-running tests (deep perft); run with `uv run pytest -m slow`",
]
